QS-1585: Fix Chat Infinite scroll now the content doesn't hidden behind bottom nav. Also the messages scroll now starts at bottom.

--- a/src/scss/pages/chat-messages.scss
+++ b/src/scss/pages/chat-messages.scss
@@ -5,8 +5,10 @@ body #root .App .views .view.notifications-view {
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
+  overflow-y: hidden;
 
   .notifications-wrapper {
-
+    height: calc(100% - 115px);
+    overflow: auto;
   }
 }
